--- a/index.html
+++ b/index.html
@@ -12,14 +12,26 @@
 <body>
 
 <div class="grid">
-  <div class="unit">
+  <div class="unit xs-1 s-1 m-1-3 l-1-3 gutter">
     <h2>Unit 1</h2>
   </div>
-  <div class="unit">
+  <div class="unit xs-1 s-1 m-1-3 l-1-3 gutter">
     <h2>Unit 2</h2>
   </div>
-  <div class="unit">
+  <div class="unit xs-1 s-1 m-1-3 l-1-3 gutter">
     <h2>Unit 3</h2>
+  </div>
+</div>
+
+<div class="grid">
+  <div class="unit xs-1 s-1 m-1 l-1-3">
+    <img class="img-flex" src="https://placehold.it/640x480" alt="image">
+  </div>
+  <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter">
+    <h2> Unit A </h2>
+  </div>
+  <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter">
+    <h2> Unit B </h2>
   </div>
 </div>
 
